# RaspBioloid-ControlPanel

./: .gitignore  CMakeLists.txt  README.md  build.sh  package.xml  setup.py
launch/: .turtlemimic.launch.swp  gui.launch
nodes/: raspbioloid_gui
res/: EDITED.odg  GUI.ui  RAW.odg  resources.qrc
scripts/: GUI.py  GUI.ui  build.sh  raspbioloid_gui.py  resources_rc.py
src/raspbioloid_gui/: GUI.py  __init__.py  custom_spin_box.py  resources_rc.py
